--- a/package.json
+++ b/package.json
@@ -43,14 +43,14 @@
     "@rollup/plugin-babel": "5.2.0",
     "@rollup/plugin-commonjs": "11.0.2",
     "@rollup/plugin-node-resolve": "7.1.1",
-    "@rollup/plugin-sucrase": "^3.1.0",
+    "@rollup/plugin-sucrase": "3.1.0",
     "babel-jest": "24.9.0",
     "babel-loader": "8.0.6",
-    "docdash": "^1.2.0",
+    "docdash": "1.2.0",
     "gh-pages": "2.2.0",
     "jest": "24.9.0",
-    "jsdoc": "^3.6.3",
-    "jsvalidator": "^1.2.0",
+    "jsdoc": "3.6.6",
+    "jsvalidator": "1.2.0",
     "nodemon": "2.0.4",
     "prettier": "2.0.5",
     "react": "16.13.1",
@@ -62,6 +62,6 @@
     "rollup-plugin-terser": "6.1.0"
   },
   "peerDependencies": {
-    "react": "^16.13.1"
+    "react": "16.13.1"
   }
 }
