--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "ga4"
   ],
   "files": [
-    "build/*"
+    "build/*",
+    "index.d.ts"
   ],
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/",
@@ -65,12 +66,12 @@
     "rollup": "2.23.1",
     "rollup-jest": "0.0.2",
     "rollup-plugin-cleanup": "3.1.1",
-    "rollup-plugin-terser": "6.1.0"
+    "rollup-plugin-terser": "6.1.0",
+    "serve": "11.3.2"
   },
   "peerDependencies": {
     "react": "16.13.1"
   },
-  "dependencies": {
-    "serve": "^11.3.2"
-  }
+  "dependencies": {},
+  "typings": "./index.d.ts"
 }
