fix: Updated Readme  * Now points to the correct NPM package ( keg-hub )

--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "clean:full": "yarn clean:nm; clean:build",
     "clean:install": "yarn clean:full; yarn install --force",
     "clean:nm": "rimraf yarn.lock; rimraf package.lock; rimraf node_modules",
-    "deploy": "yarn build && yarn docs:build && gh-pages -d docs",
     "dev": "nodemon --watch ./configs --exec 'NODE_ENV=production rollup -c ./configs/rollup.config.js -w'",
     "docs:build": "rimraf ./docs && ./node_modules/.bin/jsdoc -c ./configs/jsdoc.json -R README.md",
+    "docs:deploy": "yarn build && yarn docs:build && gh-pages -d docs",
     "docs:serve": "cd ./docs && serve .",
     "docs": "yarn docs:build && yarn docs:serve",
     "format": "yarn pretty",
